--- a/assets/admin/css/style.css
+++ b/assets/admin/css/style.css
@@ -14,6 +14,7 @@
   .pimage{
     height: 35rem;
     width: 35rem;
+    cursor: pointer;
   }
   
   .pid{
@@ -48,5 +49,5 @@
   
   .pcategory{
     color: #7a7a7a;
-    margin-top: 5rem;
+    margin-top: 2rem;
   }
